tests/errors/prints-show.ja
procedure main()
  int x
  int y
  x += 8
  y += 13
  show(x,y)
